--- a/common/analyses.tex
+++ b/common/analyses.tex
@@ -2,11 +2,42 @@
 % Daniel J. Greenhoe
 % LaTeX File
 %============================================================================
-
-
 %=======================================
 \chapter{Analyses and Transforms}
 %=======================================
+\qboxnpq{
+  Joseph Fourier (1768--1830)
+  \index{Fourier, Joseph}
+  \index{quotes!Fourier, Joseph}
+  \footnotemark
+  }
+  {../common/people/fourier_bunzil_wkp_pdomain_gray.jpg}
+  %{Mathematics compares the most diverse phenomena and discovers the secret analogies that unite them.}
+  {%
+  The analytical equations
+  \ldots
+  %, unknown to the ancient geometers, which Descartes was the first to introduce into the study of curves and surfaces, 
+  %are not restricted to the properties of figures, and to 
+  %those properties which are the object of rational mechanics ; they 
+  extend to all general phenomena. 
+  There cannot be a language more universal and more simple, 
+  more free from errors and from obscurities, 
+  \ldots
+  %that is to say more worthy to express the invariable relations of natural things. 
+  %Considered from this point of view, 
+  mathematical analysis is as extensive as nature itself; 
+  \ldots
+  %it defines all perceptible relations, measures times, spaces, forces, temperatures ; 
+  %this difficult science is formed slowly, but 
+  it preserves every principle which it has once acquired; 
+  it grows and strengthens itself incessantly in the midst of the many variations and errors of the human mind. 
+  Its chief attribute is clearness; it has no marks to express confused notions. 
+  It brings together phenomena the most diverse, and discovers the hidden analogies which unite them.
+  }
+  \footnotetext{\begin{tabular}[t]{ll}
+    quote: & \citerppc{fourier1822e}{7}{8}{Preliminary Discourse}\\
+    image: & \scs\url{http://en.wikipedia.org/wiki/File:Fourier2.jpg}, public domain
+  \end{tabular}}
 %=======================================
 \section{Abstract spaces}
 %=======================================
@@ -37,7 +68,7 @@ to form a \structe{lattice}.
 \begin{figure}[th]
 \begin{center}
 %\input{../common/math/graphics/latlattopxyz.tex}%
-\input{latlattopxyz_eps_rgb.tex}
+%\input{latlattopxyz_eps_rgb.tex}
 \end{center}
 \caption{
   lattice of topologies on $\setX\eqd\setn{x,y,z}$ \xref{ex:set_lat_top_xyz}
@@ -84,7 +115,7 @@ are also \hie{algebras of sets}\ifsxref{setstrct}{def:algsets}.
 %  }%
 \begin{minipage}{42mm}%
 %\setlength{\unitlength}{\tw/400}
-\input{../common/math/graphics/lat2xyzdotted.tex}
+%\input{../common/math/graphics/pdfs/lat2xyzdotted.pdf}
 \end{minipage}%
 
 
@@ -103,7 +134,7 @@ are also \hie{algebras of sets}\ifsxref{setstrct}{def:algsets}.
 
 \begin{figure}[th]
 \begin{center}
-{\psset{unit=24mm}{\input{../common/math/graphics/latlatalgwxyz.tex}}}
+%{\psset{unit=24mm}{\input{../common/math/graphics/pdfs/latlatalgwxyz.pdf}}}
 \caption{%
   lattice of \structe{algebras of sets} on $\setn{w,x,y,z}$ \xref{ex:algsets_wxyz}
   \label{fig:algsets_wxyz}
@@ -131,7 +162,7 @@ Every linear subspace contains the additive identity zero vector, and every line
 
 \begin{figure}[th]
 \begin{center}
-  \input{../common/math/graphics/latr3subspaces.tex}
+%  \input{../common/math/graphics/pdfs/latr3subspaces.pdf}
   \caption{lattice of subspaces of $\R^3$ \xref{ex:r3subspaces}\label{fig:latr3subspaces}}
 \end{center}
 \end{figure}
@@ -150,7 +181,7 @@ Every linear subspace contains the additive identity zero vector, and every line
   \psset{unit=7.5mm}%
   \begin{center}
   \footnotesize%
-  \input{../common/math/graphics/r3subspaces_xy.tex}%
+%  \input{../common/math/graphics/pdfs/r3subspaces_xy.pdf}%
   \end{center}
 \end{minipage}
 
@@ -193,7 +224,7 @@ Every linear subspace contains the additive identity zero vector, and every line
 %=======================================
 \section{Analyses}
 %=======================================
-An \hid{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
+An \opd{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
 %A sequence $\seq{\spV_j}{j\in\Z}$ of linear subspaces of a linear space $\spX$ is an \hib{analysis} of $\spX$.
         %if  $\seq{\spV_j}{j\in\Z}$ is a partition of $\spX$.
         The partial or complete reconstruction of $\spX$ from this set is a \hid{synthesis}.%
@@ -208,9 +239,9 @@ An \hid{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
 
 \begin{figure}[th]
   \begin{tabular}{*{3}{>{\scs}c}}
-     \input{../common/math/graphics/latr3linear.tex}%
-    &\input{../common/math/graphics/latr3m3.tex}%
-    &\input{../common/math/graphics/latr3mra.tex}%
+    % \input{../common/math/graphics/latr3linear.tex}%
+    %&\input{../common/math/graphics/latr3m3.tex}%
+    %&\input{../common/math/graphics/latr3mra.tex}%
     \\linearly ordered analysis of $\R^3$
     &M-3 analysis of $\R^3$
     &wavelet-like analysis of $\R^3$
@@ -308,22 +339,16 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 \hline%
 \mc{1}{B}{Cosine analysis  (even Fourier series)} & \mc{1}{B}{Cosine polynomial analysis}%
 \\%
-  \input{../common/math/graphics/baslat_cosh.tex}%
+  \input{../common/math/graphics/pdfs/baslat_cosh.pdf}%
 &%
-  \input{../common/math/graphics/baslat_cose.tex}%
+  \input{../common/math/graphics/pdfs/baslat_cose.pdf}%
 \\\hline%
 \mc{1}{|B|}{Chebyshev polynomial analysis\cittrpg{rivlin1974}{4}{047172470X}}&\mc{1}{|B|}{Hadamard-3 analysis}%
 \\%
-  \input{../common/math/graphics/baslat_cheby.tex}%
+  \input{../common/math/graphics/pdfs/baslat_cheby.pdf}%
 &%
-  \input{../common/math/graphics/baslat_h3.tex}%
+  \input{../common/math/graphics/pdfs/baslat_h3.pdf}%
 \\\hline%
-%\mc{1}{|B|}{Haar/Daubechies-$p1$ wavelet analysis} & \mc{1}{B|}{Daubechies-$p2$ wavelet analysis}%
-%\\%
-%  \input{../common/math/graphics/baslat_d1.tex}%
-%&%
-%  \input{../common/math/graphics/baslat_d2.tex}%
-%\\\hline%
 \end{tabular}%
   \end{fsL}%
 \end{center}}%
@@ -346,7 +371,7 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 {\begin{minipage}{60mm}%
   \begin{center}
 %  \mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/wavelets/graphics/latmn.tex}%
+  \input{../common/math/graphics/pdfs/latmn.pdf}%
   \end{center}
 \end{minipage}}
 
@@ -742,7 +767,7 @@ and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in 
   %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
   \fns%
   \psset{yunit=0.5\psunit}%
-  \input{../common/wavelets/graphics/latmra.tex}%
+  \input{../common/math/graphics/pdfs/latmra.pdf}%
 \end{minipage}}
 
 \mbox{}\\
@@ -757,7 +782,7 @@ and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in 
 \hfill%
 {\begin{minipage}{60mm}%
   %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/wavelets/graphics/latwav.tex}%
+  \input{../common/math/graphics/pdfs/latwav.pdf}%
 \end{minipage}}
 \citetblt{
   \citerpgc{greenhoe2013wsd}{72}{0983801134}{Section 2.4.3 Order structure}
@@ -893,7 +918,7 @@ the following properties:
 \hfill%
 {\begin{minipage}{60mm}%
   %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/wavelets/graphics/latwav123.tex}%
+  %\input{../common/wavelets/graphics/latwav123.tex}%
 \end{minipage}}%
 
 
