--- a/common/mra.tex
+++ b/common/mra.tex
@@ -54,7 +54,7 @@
 %=======================================
 %\section{Analyses}
 %=======================================
-The MRA is an \hib{analysis} of the linear space $\spLLR$.
+The MRA is an \opb{analysis} of the linear space $\spLLR$.
 An analysis of a linear space $\spX$ is any sequence $\seq{\spV_j}{j\in\Z}$ of linear subspaces of $\spX$.
 %A sequence $\seq{\spV_j}{j\in\Z}$ of linear subspaces of a linear space $\spX$
 %        is an \hib{analysis} of $\spX$.
@@ -72,9 +72,9 @@ An analysis of a linear space $\spX$ is any sequence $\seq{\spV_j}{j\in\Z}$ of l
   For example, a Fourier analysis is a sequence of subspaces with sinusoidal bases.
   Examples of subspaces in a Fourier analysis include $\spV_1=\linspan\setn{e^{ix}}$, 
   $\spV_{2.3}=\linspan\setn{e^{i2.3x}}$, $\spV_{\sqrt{2}}=\linspan\setn{e^{i\sqrt{2}x}}$, etc.
-  A \hib{transform} is loosely defined as a function that maps a family of functions
+  A \opb{transform} is loosely defined as a function that maps a family of functions
   into an analysis.
-  A very useful transform (a ``\hie{Fourier transform}") for Fourier Analysis is \xref{def:opFT}
+  A very useful transform (a ``\ope{Fourier transform}") for Fourier Analysis is \xref{def:opFT}
   \\\indentx$\ds\brs{\opFT\ff}(\omega) \eqd \frac{1}{\sqrt{2\pi}} \int_\R \ff(x) e^{-i\omega x} \dx$
 
 %=======================================
