--- a/common/wavelets/fwt.tex
+++ b/common/wavelets/fwt.tex
@@ -104,7 +104,7 @@ This is formally stated and proved in the next theorem.
 \index{scaling filters}
 \index{wavelet filters}
 %--------------------------------------
-\formbox{
+\thmbox{
    \begin{array}{rcl}
       v_j(n) &=& [\fhb \conv v_{j+1}](2n) \\
       w_j(n) &=& [\fgb \conv v_{j+1}](2n)
@@ -142,14 +142,6 @@ This is formally stated and proved in the next theorem.
    \end{align*}
 \end{proof}
 
-
-
-These filtering and downsampling operations are equivalent to the 
-operations performed by a filter bank.  
-Therefore, a filter bank can be 
-used to implement a Fast Wavelet Transform (FWT).
-This is illustrated in \prefp{fig:fwt}.
-
 \begin{figure}[h] %\color{figcolor}
 \centering\gsize\input{../common/wavelets/graphics/fwt_diagram.tex}
 \caption{
@@ -157,8 +149,11 @@ This is illustrated in \prefp{fig:fwt}.
    \label{fig:fwt}
    }
 \end{figure}
-
-
+These filtering and downsampling operations are equivalent to the 
+operations performed by a filter bank.  
+Therefore, a filter bank can be 
+used to implement a \ope{Fast Wavelet Transform} (\ope{FWT}), 
+as illustrated in \prefpp{fig:fwt}.
 
 %\begin{center}
 %\begin{figure}[h] \color{figcolor}
